# spln-2223

TP1/: notas.txt
TPC1/: medicina.json  medicina.py  medicina.txt  relatorio.md
TPC1/temp/: medicinas.html
TPC2/: exemplo.txt  lex.py  medicina.py  medicina2.json  notas.txt  parser.out  parser.py  parsetab.py  relatorio.md  sintaxe.txt  tipo.txt
TPC3/: exemplo.txt  lex.py  notas.txt  parser.py  relatorio.md  saida.html
TPC4/: notas.txt  out.txt  out2.txt  relatorio.md  tokenizadorSPLN.py
TPC5/: relatorio.md
TPC5/tokenizadorSPLN/: LICENSE  pyproject.toml
TPC5/tokenizadorSPLN/tokenizadorSPLN/: __init__.py  utils.py
TPC6/: JN-corpus.py  relatorio.md
TPC6/corpus/: .erros.txt
TPC6/corpus/2010_05_12/: .corpus.txt  Política de cookies.txt
TPC6/corpus/2011_01_27/: .corpus.txt  BCBM.txt  Boa Cama Boa Mesa.txt
TPC6/corpus/2011_04_06/: .corpus.txt  Boa Cama Boa Mesa.txt
TPC6/corpus/2012_05_03/: .corpus.txt  Publicidade.txt
TPC6/corpus/2012_12_17/: .corpus.txt  Política de privacidade.txt
TPC6/corpus/2012_12_18/: .corpus.txt  Contactos.txt
TPC6/corpus/2015_01_08/: Autores.txt
TPC7/: JN-corpus.py  JN-corpus.sh  JN-corpus.txt  relatorio.md
aula10/: getTables.py  out.txt
aula11/: teste.py
aula12/: aula12.py  doencas.json
aula4/: Harry.txt  Harry2.txt  comandos.txt  tokenizadorSPLN.py
aula5/: out.txt
aula6/: aula.py
aula7/: JN-corpus.py  out
aula8/: ex1.ipynb  ex1.py
aula8/corpus/: 5.txt  7.txt  ex1.ipynb  modelo_harry.ts_metadata.tsv
aula8/models/: word2vec.model
aula9/: CriaModelo.py  analogias.txt  sim.txt  teste0.py  teste1.py
(+1068 files in other folders)
